# is_trait

./: Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
src/: lib.rs
