[package]
name = "is_trait"
version = "0.1.1"
license = "MIT OR Apache-2.0"
description = "Add a macro to check if a type implements a trait at runtime"
edition = "2021"
repository = "https://github.com/Raspberry1111/is_trait"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
